--- a/css/style.css
+++ b/css/style.css
@@ -16,83 +16,96 @@ a {
 img {
   max-width: 100%;
 }
+
 @font-face {
-	font-family: 'Open Sans';
-	src: url('https://348810.selcdn.ru/webfont/opensans/1.woff2') format('woff2');
-	font-weight: 1;
-	font-style: normal;
+  font-family: 'Open Sans';
+  src: url('https://348810.selcdn.ru/webfont/opensans/1.woff2') format('woff2');
+  font-weight: 1;
+  font-style: normal;
 }
+
 @font-face {
-	font-family: 'Open Sans';
-	src: url('https://348810.selcdn.ru/webfont/opensans/300.woff2') format('woff2');
-	font-weight: 300;
-	font-style: normal;
+  font-family: 'Open Sans';
+  src: url('https://348810.selcdn.ru/webfont/opensans/300.woff2') format('woff2');
+  font-weight: 300;
+  font-style: normal;
 }
+
 @font-face {
-	font-family: 'Open Sans';
-	src: url('https://348810.selcdn.ru/webfont/opensans/300i.woff2') format('woff2');
-	font-weight: 300;
-	font-style: italic;
+  font-family: 'Open Sans';
+  src: url('https://348810.selcdn.ru/webfont/opensans/300i.woff2') format('woff2');
+  font-weight: 300;
+  font-style: italic;
 }
+
 @font-face {
-	font-family: 'Open Sans';
-	src: url('https://348810.selcdn.ru/webfont/opensans/400.woff2') format('woff2');
-	font-weight: 400;
-	font-style: normal;
+  font-family: 'Open Sans';
+  src: url('https://348810.selcdn.ru/webfont/opensans/400.woff2') format('woff2');
+  font-weight: 400;
+  font-style: normal;
 }
+
 @font-face {
-	font-family: 'Open Sans';
-	src: url('https://348810.selcdn.ru/webfont/opensans/400i.woff2') format('woff2');
-	font-weight: 400;
-	font-style: italic;
+  font-family: 'Open Sans';
+  src: url('https://348810.selcdn.ru/webfont/opensans/400i.woff2') format('woff2');
+  font-weight: 400;
+  font-style: italic;
 }
+
 @font-face {
-	font-family: 'Open Sans';
-	src: url('https://348810.selcdn.ru/webfont/opensans/500.woff2') format('woff2');
-	font-weight: 500;
-	font-style: normal;
+  font-family: 'Open Sans';
+  src: url('https://348810.selcdn.ru/webfont/opensans/500.woff2') format('woff2');
+  font-weight: 500;
+  font-style: normal;
 }
+
 @font-face {
-	font-family: 'Open Sans';
-	src: url('https://348810.selcdn.ru/webfont/opensans/500i.woff2') format('woff2');
-	font-weight: 500;
-	font-style: italic;
+  font-family: 'Open Sans';
+  src: url('https://348810.selcdn.ru/webfont/opensans/500i.woff2') format('woff2');
+  font-weight: 500;
+  font-style: italic;
 }
+
 @font-face {
-	font-family: 'Open Sans';
-	src: url('https://348810.selcdn.ru/webfont/opensans/600.woff2') format('woff2');
-	font-weight: 600;
-	font-style: normal;
+  font-family: 'Open Sans';
+  src: url('https://348810.selcdn.ru/webfont/opensans/600.woff2') format('woff2');
+  font-weight: 600;
+  font-style: normal;
 }
+
 @font-face {
-	font-family: 'Open Sans';
-	src: url('https://348810.selcdn.ru/webfont/opensans/600i.woff2') format('woff2');
-	font-weight: 600;
-	font-style: italic;
+  font-family: 'Open Sans';
+  src: url('https://348810.selcdn.ru/webfont/opensans/600i.woff2') format('woff2');
+  font-weight: 600;
+  font-style: italic;
 }
+
 @font-face {
-	font-family: 'Open Sans';
-	src: url('https://348810.selcdn.ru/webfont/opensans/700.woff2') format('woff2');
-	font-weight: 700;
-	font-style: normal;
+  font-family: 'Open Sans';
+  src: url('https://348810.selcdn.ru/webfont/opensans/700.woff2') format('woff2');
+  font-weight: 700;
+  font-style: normal;
 }
+
 @font-face {
-	font-family: 'Open Sans';
-	src: url('https://348810.selcdn.ru/webfont/opensans/700i.woff2') format('woff2');
-	font-weight: 700;
-	font-style: italic;
+  font-family: 'Open Sans';
+  src: url('https://348810.selcdn.ru/webfont/opensans/700i.woff2') format('woff2');
+  font-weight: 700;
+  font-style: italic;
 }
+
 @font-face {
-	font-family: 'Open Sans';
-	src: url('https://348810.selcdn.ru/webfont/opensans/800.woff2') format('woff2');
-	font-weight: 800;
-	font-style: normal;
+  font-family: 'Open Sans';
+  src: url('https://348810.selcdn.ru/webfont/opensans/800.woff2') format('woff2');
+  font-weight: 800;
+  font-style: normal;
 }
+
 @font-face {
-	font-family: 'Open Sans';
-	src: url('https://348810.selcdn.ru/webfont/opensans/800i.woff2') format('woff2');
-	font-weight: 800;
-	font-style: italic;
+  font-family: 'Open Sans';
+  src: url('https://348810.selcdn.ru/webfont/opensans/800i.woff2') format('woff2');
+  font-weight: 800;
+  font-style: italic;
 }
 
 
@@ -102,24 +115,28 @@ img {
   font-weight: 100;
   font-style: normal;
 }
+
 @font-face {
   font-family: 'Bebas Neue';
   src: local('Bebas Neue Light'), local('BebasNeue-Light'), url('https://hb.bizmrg.com/fonts/bebasneue/200.woff2') format('woff2'), url('https://hb.bizmrg.com/fonts/bebasneue/200.woff') format('woff');
   font-weight: 200;
   font-style: normal;
 }
+
 @font-face {
   font-family: 'Bebas Neue';
   src: local('Bebas Neue Book'), local('BebasNeueBook'), url('https://hb.bizmrg.com/fonts/bebasneue/300.woff2') format('woff2'), url('https://hb.bizmrg.com/fonts/bebasneue/300.woff') format('woff');
   font-weight: 300;
   font-style: normal;
 }
+
 @font-face {
   font-family: 'Bebas Neue';
   src: local('Bebas Neue Regular'), local('BebasNeueRegular'), url('https://hb.bizmrg.com/fonts/bebasneue/400.woff2') format('woff2'), url('https://hb.bizmrg.com/fonts/bebasneue/400.woff') format('woff');
   font-weight: 400;
   font-style: normal;
 }
+
 @font-face {
   font-family: 'Bebas Neue';
   src: local('Bebas Neue Bold'), local('BebasNeueBold'), url('https://hb.bizmrg.com/fonts/bebasneue/700.woff2') format('woff2'), url('https://hb.bizmrg.com/fonts/bebasneue/700.woff') format('woff');
@@ -127,13 +144,20 @@ img {
   font-style: normal;
 }
 
-body  {
-  font-family: 'Open Sans',  Helvetica, sans-serif;
+body {
+  font-family: 'Open Sans', Helvetica, sans-serif;
 }
+
 /*----------global---------*/
-h1, h2, h3, h4, h5, h6  {
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
   margin: 0;
 }
+
 .list-reset {
   margin: 0;
   padding: 0;
@@ -147,7 +171,7 @@ h1, h2, h3, h4, h5, h6  {
   cursor: pointer;
 }
 
-.btn  {
+.btn {
   width: 150px;
   max-height: 40px;
   padding: 11px 30px;
@@ -164,12 +188,12 @@ h1, h2, h3, h4, h5, h6  {
   transition-delay: 0.3s;
 }
 
-.btn:focus  {
+.btn:focus {
   outline: #00a4e5;
   background-color: navy;
 }
 
-.btn:hover  {
+.btn:hover {
   outline: none;
   background-color: #fff;
   color: #00a4e5;
@@ -192,7 +216,7 @@ p {
 
 /*------------header------------*/
 
-.main-header  {
+.main-header {
   width: 1442px;
   margin: 0 auto;
   margin-bottom: 58px;
@@ -203,14 +227,14 @@ p {
   width: 100%;
   margin: 0 auto;
   min-height: 769px;
-  background-color: #141A20 ;
+  background-color: #141A20;
   background-image: url("/images/bg.jpg");
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
 }
 
-.section-hero__content  {
+.section-hero__content {
   position: relative;
   height: 769px;
   flex-direction: column;
@@ -225,14 +249,14 @@ p {
 }
 
 .site-title {
-  font-family: 'Bebas Neue' ;
+  font-family: 'Bebas Neue';
   font-size: 60px;
   font-weight: 700;
   line-height: 70.31px;
   color: #fff;
 }
 
-.section-hero__descr  {
+.section-hero__descr {
   margin-bottom: 221px;
   font-size: 16px;
   font-weight: 600;
@@ -254,15 +278,15 @@ p {
   align-items: center;
 }
 
-.main-header__item  {
+.main-header__item {
   padding: 2px 10px;
 }
 
-.main-header__item:not(:last-child)  {
+.main-header__item:not(:last-child) {
   margin-right: 40px;
 }
 
-.main-header__link  {
+.main-header__link {
   font-size: 12px;
   font-weight: 700;
   line-height: 14px;
@@ -274,18 +298,18 @@ p {
   transition-delay: 00.3s;
 }
 
-.main-header__link:focus  {
+.main-header__link:focus {
   outline: none;
   color: navy;
 }
 
-.main-header__link:hover  {
+.main-header__link:hover {
   color: #00a4e5;
 }
 
 /*------------section-about------------*/
 
-.section-about  {
+.section-about {
   margin-bottom: 118px;
 }
 
@@ -297,7 +321,7 @@ p {
   color: #48555b;
 }
 
-.section-about__header  {
+.section-about__header {
   justify-content: center;
   margin-bottom: 92px;
 }
@@ -308,7 +332,7 @@ p {
 
 }
 
-.section-about__title::after  {
+.section-about__title::after {
   content: '';
   position: absolute;
   background: #00a4e5;
@@ -318,7 +342,7 @@ p {
   height: 2px;
 }
 
-.section-about__block   {
+.section-about__block {
   width: 50%;
 }
 
@@ -326,7 +350,7 @@ p {
   margin-right: 76.92px;
 }
 
-.section-about__strong  {
+.section-about__strong {
   display: block;
   margin-bottom: 30px;
   font-size: 20px;
@@ -335,7 +359,7 @@ p {
   color: #48555b;
 }
 
-.section-about__link  {
+.section-about__link {
   color: #00a4e5;
   transition-property: color;
   transition-duration: 0.3s;
@@ -343,12 +367,12 @@ p {
   transition-delay: 00.3s;
 }
 
-.section-about__link:focus  {
+.section-about__link:focus {
   outline: none;
   color: navy;
 }
 
-.section-about__link:hover  {
+.section-about__link:hover {
   color: blue;
 }
 
@@ -363,7 +387,7 @@ p {
   color: #48555b;
 }
 
-.section-text:not(:last-child)  {
+.section-text:not(:last-child) {
   margin-bottom: 15px;
 }
 
@@ -388,7 +412,7 @@ p {
   filter: hue-rotate(180deg);
 }
 
-.section-about__previev:not(:last-child)  {
+.section-about__previev:not(:last-child) {
   margin-right: 20px;
 }
 
@@ -404,11 +428,11 @@ p {
   background-image: url("/images/we-build.jpg");
 }
 
-.section-about__preview-link  {
+.section-about__preview-link {
   outline: none;
 }
 
-.section-about__preview-link::before  {
+.section-about__preview-link::before {
   content: '';
   position: absolute;
   top: 0;
@@ -423,11 +447,11 @@ p {
   margin-bottom: 115px;
 }
 
-.section-services__header  {
+.section-services__header {
   margin-bottom: 80px;
 }
 
-.section-services__title  {
+.section-services__title {
   position: relative;
   display: inline-block;
   margin-right: 154px;
@@ -443,7 +467,7 @@ p {
   height: 2px;
 }
 
-.section-services__top-text  {
+.section-services__top-text {
   margin-right: 31.2px;
   font-size: 11px;
   font-weight: 400;
@@ -457,56 +481,56 @@ p {
 
 
 
-.section-services__article  {
+.section-services__article {
   width: calc(100% / 3);
   padding: 138px 22px 39px 22px;
   border: 1px solid #e6e6e6;
-  background-position: top 38px left 23px ;
+  background-position: top 38px left 23px;
   background-repeat: no-repeat;
 }
 
-.section-services__article:not(:nth-child(3n))  {
+.section-services__article:not(:nth-child(3n)) {
   margin-right: 28px;
 }
 
 .section-services__article_1 {
- background-image: url("/images/organizer.svg");
+  background-image: url("/images/organizer.svg");
 }
 
 .section-services__article_2 {
   background-image: url("/images/shop.svg");
- }
+}
 
- .section-services__article_3 {
+.section-services__article_3 {
   background-image: url("/images/building.svg");
- }
+}
 
- .section-services__article-title {
+.section-services__article-title {
   margin-bottom: 13px;
   font-size: 16px;
   font-weight: 700;
   line-height: 24px;
   color: #48555b;
   text-transform: uppercase;
- }
+}
 
- .section-services__article-text  {
+.section-services__article-text {
   font-size: 13px;
   font-weight: 400;
   line-height: 23px;
   color: #48555b;
- }
+}
 
- .section-services__article-text:not(:last-child) {
+.section-services__article-text:not(:last-child) {
   margin-bottom: 13px;
- }
+}
 
 
 
 
 /*------------main-footer------------*/
 
-.site-footer  {
+.site-footer {
   width: 1442px;
   margin: 0 auto;
 }
@@ -515,81 +539,81 @@ p {
   width: 100%;
 }
 
-.section-work  {
+.section-work {
   min-height: 498px;
   padding-top: 120px;
   background-image: url("/images/bg-bottom.jpg");
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
- }
+}
 
 
 
- .section-work__content {
+.section-work__content {
   flex-direction: column;
   align-items: center;
- }
+}
 
- .section-work__title {
+.section-work__title {
   margin-bottom: 35px;
   text-align: center;
   font-size: 30px;
   font-weight: 700;
   line-height: 36px;
   color: rgba(72, 85, 91, .6);
- }
+}
 
- .section-signup {
+.section-signup {
 
   height: 100px;
   padding-top: 30px;
   padding-bottom: 30px;
   background-color: #171819;
- }
+}
 
- .section-signup__content {
+.section-signup__content {
   justify-content: center;
- }
+}
 
- .section-signup__title  {
+.section-signup__title {
   margin-right: 70px;
   font-size: 22px;
   font-weight: 700;
   line-height: 22.78px;
   color: #fff;
- }
+}
 
- .signup-form {
+.signup-form {
   background-color: #fff;
   max-height: 40px;
- }
+}
 
- .signup-form__input  {
+.signup-form__input {
   margin: 0;
   border: none;
   margin: 0;
   min-height: 40px;
- }
+}
 
- .footer-content  {
+.footer-content {
   width: 100%;
   min-height: 240px;
   padding-top: 42px;
   padding-bottom: 47px;
-  background-color:#141A20;
+  background-color: #141A20;
   color: #fff;
- }
-
-.footer-content__block  {
-  width: calc((100% / 3) - 65px) ;
 }
 
-.footer-content__block:not(:last-child)  {
+.footer-content__block {
+  width: calc((100% / 3) - 65px);
+}
+
+.footer-content__block:not(:last-child) {
   margin-right: 65px;
 }
 
-.footer-content__title  {
+.footer-content__title {
   margin-bottom: 19px;
   font-size: 11px;
   font-weight: 400;
@@ -608,18 +632,18 @@ p {
   line-height: 19px;
 }
 
-.col-2  {
-  margin:0;
-  padding:0;
+.col-2 {
+  margin: 0;
+  padding: 0;
 }
 
 .col-2 li {
-  display:block;
-  float:left;
-  width:49%;
+  display: block;
+  float: left;
+  width: 49%;
 }
 
-.col-2 li:not(:last-child)  {
+.col-2 li:not(:last-child) {
   margin-bottom: 11px;
 }
 
@@ -636,7 +660,7 @@ p {
 
 }
 
-.footer-content__addres-text  {
+.footer-content__addres-text {
   margin-bottom: 32px;
   font-size: 11px;
   font-weight: 400;
@@ -644,7 +668,7 @@ p {
   font-style: normal;
 }
 
-.footer-content__addres-link  {
+.footer-content__addres-link {
   display: block;
   font-size: 11px;
   font-weight: 400;
@@ -660,7 +684,7 @@ p {
   margin-right: 10px;
 }
 
-.social-item__link  {
+.social-item__link {
   display: block;
   width: 20px;
   height: 20px;
@@ -675,15 +699,15 @@ p {
   background-image: url("/images/facebook.png");
 }
 
-.social-item__link_instagram  {
+.social-item__link_instagram {
   background-image: url("/images/instagram.png");
 }
 
-.social-item__link_twitter  {
+.social-item__link_twitter {
   background-image: url("/images/twitter.png");
 }
 
-.social-item__link_youtube  {
+.social-item__link_youtube {
   background-image: url("/images/youtube.png");
 }
 
@@ -691,7 +715,7 @@ p {
   background-image: url("/images/likedin.png");
 }
 
-.site-footer__bottom  {
+.site-footer__bottom {
   width: 100%;
   height: 60px;
   padding-top: 22px;
@@ -700,13 +724,12 @@ p {
   color: #fff;
 }
 
-.site-footer__bottom-content  {
+.site-footer__bottom-content {
   justify-content: center;
 }
 
-.site-footer__copy  {
+.site-footer__copy {
   font-size: 11px;
   font-weight: 400;
   line-height: 12.89px;
 }
-
